# balloon-squeeze

./: .env.example  .gitignore  01-concept-brief.md  02-technical-architecture.md  03-build-roadmap.md  04-kickoff-prompt.md  05-preregistration.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  case-study-deconfounding.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: record-format.md
docs/demo/: A0_off.html  A1_announced.html  A1_implicit.html  A2_silent.html  A3_placebo.html  index.html
examples/transcripts/: A0_off.json  A1_announced.json  A1_implicit.json  A2_silent.json  A3_placebo.json
paper/: balloon-squeeze.md
paper/figures/: make_mde_figure.py  make_power_figure.py  oc-report.json
results/: real-model-runs.md
src/bsq/: __init__.py  analyze.py  canonical.py  cli.py  config.py  corpus.py  engine.py  eval.py  events.py  extract.py  gallery.py  ledger.py  models.py  oc.py  pilot.py  power.py  probe.py  record.py  recovery.py  render.py  replay.py  rng.py  scoring.py  verifier.py  views.py
src/bsq/agents/: __init__.py  (+5 more)
tests/: test_analyze.py  test_anthropic_client.py  test_bulletin_gating.py  test_corpus.py  test_demo_site.py  test_engine_e2e.py  test_eval.py  test_extract_mock.py  test_interactive.py  test_learner_recovery.py  test_ledger.py  test_llm_extractor.py  test_llm_policy.py  test_mde_figure.py  test_monologue_golden.py  test_oc.py  test_openai_client.py  test_pilot.py  test_power.py  test_probe.py  test_real_holdout_gate.py  test_real_provider_gate.py  test_record.py  test_recovery.py  test_render.py  test_replay.py  test_scoring.py  test_smoke.py  test_surface_forms.py  test_truth_channel.py  test_verifier.py
tests/fixtures/: __init__.py  monologue_golden.json  synthetic_quality.py
tools/: export_video.py
(+5 files in other folders)
